css/parser/tests/errors/rome/invalid/selector4/output.stderr
error: Expected an identifier or a string after an attribute selector operator
 --> $DIR/tests/errors/rome/invalid/selector4/input.css:1:7
  |
1 | .class[attr= {
  |       ^^^^^^^

